--- a/css/footer.scss
+++ b/css/footer.scss
@@ -1,16 +1,23 @@
 /* ---------- Footer ---------- */
 
-$footer-margin: 5em 0 2em 0;
+$footer-marginTop: 5em!important;
+$footer-marginBottom: 2em!important;
 $footer-fontSize: .875em;
-$footer-link-color: #aaa;
+$footer-color: #aaa;
 $footer-link-color-hover: #03A9F4;
-
-footer {
-  margin: $footer-margin;
-  font-size: $footer-fontSize;
+footer { 
+  padding-top: 2em;  
+  margin-top: $footer-marginTop;
+  margin-bottom: $footer-marginBottom;
+  font-size: $footer-fontSize;  
   text-align: center;
+  color: $footer-color;
+  border-top: 1px solid #e5e5e5;
+  div + div {
+    margin-top: 1em;
+  }
   a {
-    color: $footer-link-color;
+    color: $footer-color;
     text-decoration: none; 
     -webkit-transition: color .4s;
             transition: color .4s;
@@ -26,6 +33,15 @@ footer {
     fill: currentColor;
     -webkit-transition: fill .4s;
             transition: fill .4s;
+  }
+}
+@media only screen and (min-width: 768px) {
+  footer {
+    display: flex;
+    justify-content: space-between;
+    div + div {
+      margin-top: 0;
+    }
   }
 }
 
