--- a/css/scss/_base.scss
+++ b/css/scss/_base.scss
@@ -41,6 +41,9 @@
 .icon-plus:before {
   content: "\ea0a";
 }
+.icon-checkmark:before {
+  content: "\ea10";
+}
 .icon-arrow-up2:before {
   content: "\ea3a";
 }
